--- a/mybatis_3.28/.classpath
+++ b/mybatis_3.28/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="config"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.36.jar"/>
 	<classpathentry kind="lib" path="lib/mybatis-3.3.1.jar"/>
